frontend/test/should_fail/enum_model_009.gm
enum et1 {
	a,
	b = et2::u,
	c
}

enum et2 {
	u,
	v
}
